# SpikeLog-v2

./: README.md  convert.sh  pyproject.toml  run.sh  setup.sh  visualize_attention.py
configs/: base.yaml
configs/archive/: s0_spikelog_baseline.yaml  s3_1_spikelog_pruned_distill.yaml  s3_pruned_kr070.yaml
configs/datasets/: bgl.yaml  hdfs.yaml  spirit.yaml  thunderbird.yaml
configs/variants/: abl_direct_bspn.yaml  abl_direct_tdbn.yaml  abl_finetune_tdbn.yaml  abl_kd_bspn.yaml  abl_posttraining.yaml  s0_spikelog_baseline.yaml  s1_spikelog_sdsa.yaml  s2_1_spikelog_bspn_distill.yaml  s2_prepbn.yaml  s2_spikelog_bspn.yaml  s2_tdbn_kd.yaml  s2_tebn_kd.yaml  s3_1_spikelog_pruned_distill.yaml  s3_kr050.yaml  s3_kr060.yaml  s3_kr070.yaml  s3_kr080.yaml  s3_kr090.yaml  s3_kr100.yaml  s3_prepbn_kr050.yaml  s3_prepbn_kr060.yaml  s3_prepbn_kr070.yaml  s3_prepbn_kr080.yaml  s3_prepbn_kr090.yaml  s3_pruned_kr050.yaml  s3_pruned_kr060.yaml  s3_pruned_kr090.yaml  s3_pruned_kr100.yaml  s3_spikelog_pruned.yaml  s3_tdbn_kd_pruned.yaml  s3_tebn_kr050.yaml  s3_tebn_kr060.yaml  s3_tebn_kr070.yaml  s3_tebn_kr080.yaml  s3_tebn_kr090.yaml
scripts/: convert_neuromorphic.py  run_variant.py
src/data/: dataset.py  download.py  embedding.py  preprocess.py
src/lava/: profiler.py
src/models/: bspn.py  conversion.py  factory.py  prepbn.py  sdsa.py  spike_transformer.py  spikenet.py  tdbn.py  tebn.py
src/training/: predict.py  train.py  train_convert.py  train_distill.py
src/utils/: common.py  logger.py  registry.py
